Lab2/Network/vpc.tf
# Create a VPC
resource "aws_vpc" "myvpc" {
  cidr_block = var.cidr
  tags = {
    Name = "tf-vpc-iti"
  }
}
